networking/19-kubernetes-networking/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: net-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: net-demo
  template:
    metadata:
      labels:
        app: net-demo
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
