networking/19-kubernetes-networking/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: net-demo-service
spec:
  selector:
    app: net-demo
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
