networking/19-kubernetes-networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: net-demo-ingress
spec:
  rules:
    - host: net-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: net-demo-service
                port:
                  number: 80
